kubernetes/randompublish-quarkus/randompublish-quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randompublish-quarkus
spec:
  selector:
    matchLabels:
      app: randompublish-quarkus
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: frontend
        component: quarkus
        app: randompublish-quarkus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: randompublish-quarkus
          image: yurak/randompublish-quarkus:latest@sha256:88a6006607adee2f9b9dca1df4fe4db598b1ea4ee92f4d6af884329bd0143154
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 8080
              path: /q/health/live
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              port: 8080
              path: /q/health/ready
            initialDelaySeconds: 10
            periodSeconds: 30
