kubernetes/randompublish-quarkus/randompublish-quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: randompublish-quarkus
spec:
  type: ClusterIP
  selector:
    app: randompublish-quarkus
  ports:
  - protocol: TCP
    port: 8080
