kubernetes/randompublish-quarkus/randompublish-quarkus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: randompublish-quarkus
spec:
  rules:
  - host: quarkus.minikube
    http:
      paths:
      - path: /random
        backend:
          serviceName: randompublish-quarkus
          servicePort: 8080
